# BASALT-Air

./: LICENSE  MANIFEST.in  README.md  TROUBLESHOOTING.md  UPDATE_SUMMARY.txt  pixi.toml  pyproject.toml
src/BASALT.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/basalt/: __init__.py  cli.py  logger.py  qc_backend.py  shell.py
src/basalt/core/: __init__.py  cleanup.py  data_feeding.py  final_drep.py.debug_backup_20260616_225339
src/basalt/ml/: __init__.py  dataset.py  download.py  ensemble.py  model.py  utils.py
src/basalt/module/: __init__.py  autobinning.py  datafeeding.py  datafeeding.py.debug_backup_20260617_weight_fallback  reassembly.py  refinement.py  refinement.py.debug_backup_20260617_step5_path  refinement.py.debug_backup_20260617_weight_fallback
src/basalt/scripts/: __init__.py
src/basalt/steps/: __init__.py  s10_olc.py  s10_olc.py.debug_backup_20260617_olc_fix  s10_olc.py.debug_backup_20260617_quality_overwrite_fix  s1_autobinners.py  s1e_extra_binners.py  s1p_merging_bins_within_group.py  s2_bins_abundance_pe_connections.py  s3_bins_comparator_within_group.py  s4_multiple_assembly_comparator.py  s4_multiple_assembly_comparator.py.debug_backup_20260615  s5_outlier_remover_dl.py  s6_retrieve_contigs_from_pe_contigs.py  s6p_coverage_filtration.py.backup_20260618_194359_empty_dict_guard  s6p_run_checkm_taxonomy_wf.py  s7_contigs_retrieve_within_group.py  s7lr_finding_sr_contigs.py  s7p_gap_filling.py  s8_olc.py  s8_olc.py.debug_backup_20260617_tuple_fix  s9_reassembly.py  s9_reassembly.py.debug_backup_20260617_readflag_fix  s9p_hybrid_reassembly.py
