[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BASALT-Air"
version = "1.0.0"
description = "Lightweight modular metagenomic binning and refinement pipeline"
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "MIT" }
authors = [
    { name = "BASALT contributors" },
]
keywords = ["metagenomics", "binning", "MAGs", "bioinformatics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "biopython",
    "pandas",
    "numpy",
    "scikit-learn",
    "torch",
]

[project.optional-dependencies]
# Heavy DL training-related extras kept optional because they pull in CUDA stacks.
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
basalt = "basalt.cli:main"
basalt_models_download = "basalt.ml.download:main"

[project.urls]
Homepage = "https://github.com/PKU-EMBL/BASALT-Air"
Repository = "https://github.com/PKU-EMBL/BASALT-Air"
Issues = "https://github.com/PKU-EMBL/BASALT-Air/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["basalt*"]

[tool.setuptools.package-data]
"basalt.scripts" = ["*.pl"]
